[tool.poetry]
name = "deps-report"
version = "0.3.1"
description = ""
authors = ["Corentin Garcia <cgarcia@meilleursagents.com>"]

[tool.poetry.scripts]
deps-report = "deps_report.main:main"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
beautifulsoup4 = "^4.10.0"
click = "^8.0.1"
colorama = "^0.4.4"
packaging = "^21.3"
PyGithub = "^1.55"
python-dateutil = "^2.8.2"
tabulate = "^0.8.9"
toml = "^0.10.2"
urllib3 = "^1.26.8"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
mypy = "^0.931"
pdbpp = "^0.10.3"
pyproject-flake8 = "^0.0.1a2"
pytest = "^6.2.5"
types-python-dateutil = "*"
types-tabulate = "*"
types-toml = "*"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
max_line_length = 88
extend-ignore = "D100,D101,D104,E501"
per-file-ignores = "__init__.py:F401"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
