[tool.poetry]
name = "deps-report"
version = "0.3.1"
description = ""
authors = ["Corentin Garcia <cgarcia@meilleursagents.com>"]

[tool.poetry.scripts]
deps-report = "deps_report.main:main"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3"
beautifulsoup4 = "^4"
click = "^8"
colorama = "^0.4.5"
packaging = "^21"
PyGithub = "^1"
python-dateutil = "^2"
tabulate = "^0.8"
toml = "^0.10"
urllib3 = "^1"
pydantic = "^1.10.4"
python-dotenv = "^0.21.1"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]
black = "^22"
flake8 = "^5"
flake8-docstrings = "^1"
flake8-pyproject = "^1.1.0"
isort = "^5"
mypy = "^0.971"
pdbpp = "^0.10"
pytest = "^7"
types-python-dateutil = "*"
types-tabulate = "*"
types-toml = "*"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
max_line_length = 88
extend-ignore = ["D100","D101","D104","E501"]
per-file-ignores = ["__init__.py:F401"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
